@@ -94,8 +94,15 @@ public class FilenameUtils {
 
     /**
      * The extension separator character.
+     * @since Commons IO 1.4
      */
-    private static final char EXTENSION_SEPARATOR = '.';
+    public static final char EXTENSION_SEPARATOR = '.';
+
+    /**
+     * The extension separator String.
+     * @since Commons IO 1.4
+     */
+    public static final String EXTENSION_SEPARATOR_STR = (new Character(EXTENSION_SEPARATOR)).toString();
 
     /**
      * The Unix separator character.
